--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AirBnB clone</title>
-  </head>
-  <body style="margin: 0px; padding: 0px;">
-    <header style="background-color: #FF0000; height: 70px; width:100%;">
-    </header>
-    <div></div>
-    <footer style="background-color: #00FF00; height:60px; width:100%; text-align:center; position: absolute; bottom: 0; display: table;">
-      <div style="display:table-cell; vertical-align: middle;">
-	Holberton School
-      </div>
-    </footer>
-  </body>
+<html lang="en">
+    <head>
+        <title>AirBnB Clone</title>
+    </head>
+    <body style="margin:0; padding:0">
+        <header style="Background-color:#FF0000; height: 70px; width:100%;">
+        </header>
+        <footer style="Background-color:#00FF00; height:60px; width:100%; position: absolute; bottom:0; text-align:center; line-height:60px">
+            Best School
+        </footer>
+    </body>
 </html>
