--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AirBnB clone</title>
-  <style>
-    body {margin: 0px; padding: 0px;}
-    header {background-color: #FF0000; height: 70px; width:100%; }
-    footer {background-color: #00FF00; height: 60px; width:100%; text-align: center; position: absolute; bottom: 0; display: table;}
-    footer div { display: table-cell; vertical-align: middle;}
-  </style>
-</head>
-<body>
-  <header>
-  </header>
-  <div></div>
-  <footer>
-    <div>
-      Holberton School
-    </div>
-  </footer>
-</body>
+<html lang="en">
+    <head>
+        <title>AirBnB Clone</title>
+        <style>
+            body {margin: 0; padding: 0;}
+            header{
+                Background-color:#FF0000;
+                height: 70px;
+                width:100%;
+            }
+            footer{
+                Background-color:#00FF00;
+                height:60px;
+                width:100%;
+                position: absolute;
+                bottom:0; text-align:center;
+                line-height:60px
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
